--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "json-to-table",
   "version": "1.0.0",
-  "description": "Convert an array of Objects into a table",
+  "description": "Convert an array of Objects into a table format",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
