--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Convert an array of Objects into a table format",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -29,5 +29,9 @@
     "dottie": "^0.2.6",
     "lodash": "^2.4.1",
     "traverse": "^0.6.6"
+  },
+  "devDependencies": {
+    "chai": "^1.10.0",
+    "mocha": "^2.1.0"
   }
 }
