--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-to-table",
-  "version": "2.1.5",
+  "version": "3.0.0",
   "description": "Convert an array of Objects into a table format",
   "main": "index.js",
   "scripts": {
@@ -26,11 +26,11 @@
   },
   "homepage": "https://github.com/Growmies/json-to-table",
   "dependencies": {
-    "lodash": "^4.5.1",
-    "traverse": "^0.6.6"
+    "lodash": "~4.16.0",
+    "traverse": "~0.6.6"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^2.1.0"
+    "chai": "~3.5.0",
+    "mocha": "~3.1.2"
   }
 }
