--- a/package.json
+++ b/package.json
@@ -26,7 +26,15 @@
   },
   "homepage": "https://github.com/Growmies/json-to-table",
   "dependencies": {
-    "lodash": "~4.16.0",
+    "lodash": "4.17.9",
+    "lodash-4.17.1": "npm:lodash@4.17.1",
+    "lodash-4.17.10": "npm:lodash@4.17.10",
+    "lodash-4.17.11": "npm:lodash@4.17.11",
+    "lodash-4.17.2": "npm:lodash@4.17.2",
+    "lodash-4.17.3": "npm:lodash@4.17.3",
+    "lodash-4.17.4": "npm:lodash@4.17.4",
+    "lodash-4.17.5": "npm:lodash@4.17.5",
+    "lodash-4.17.9": "npm:lodash@4.17.9",
     "traverse": "~0.6.6"
   },
   "devDependencies": {
